--- a/views/product/menu.hbs
+++ b/views/product/menu.hbs
@@ -11,10 +11,10 @@
             <div class="row text-center" >
                 {{#each allProduct}}
                     <div class="col-md-4" style="margin-top: 50px">
-                        <img id="contentImg" src={{img}}>
+                        <img id="contentImg" src="../uploads/{{productImg}}">
                         <h4 class="section-heading">{{title}}</h4>
-                        <p class="text-muted">{{des}}</p>
-                        <p class="btn btn-primary" style="position:absolute;bottom:-20px;right:5px;margin:0px;padding:10px 23px;">{{price}}</p>
+                        <p class="text-muted">{{description}}</p>
+                        <p class="btn btn-primary" style="position:absolute;bottom:-20px;right:5px;margin:0px;padding:10px 23px;">${{price}}</p>
                     </div>
                 {{/each}}
             </div>
