--- a/views/general/dashboard.hbs
+++ b/views/general/dashboard.hbs
@@ -3,7 +3,7 @@
 <div class="holder">
     <ul class="nav navbar-nav ml-auto text-uppercase">
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Home</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/user/management">User Management</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/product/management">Product Management</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/loadData/managementUser">User Management</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/loadData/managementProduct">Product Management</a></li>
     </ul>   
 </div>
