--- a/views/general/index.hbs
+++ b/views/general/index.hbs
@@ -48,7 +48,9 @@
                         <img id="contentImg" src="uploads/{{productImg}}">
                         <h4 class="section-heading">{{title}}</h4>
                         <p class="text-muted">{{description}}</p>
-                        <p class="btn btn-primary" style="position:absolute;bottom:-20px;right:5px;margin:0px;padding:10px 23px;">${{price}}</p>
+                        <p id="add-to-cart" class="btn btn-primary" style="position:absolute;right:5px;bottom:-30px;margin:0px;padding:10px 23px;" onclick="window.location.href='/add-to-cart/{{_id}}'">
+                            <span>${{price}}</span>
+                        </p>
                     </div>
                 {{/each}}
                 </div>
@@ -60,7 +62,9 @@
                         <img id="contentImg" src="uploads/{{productImg}}">
                         <h4 class="section-heading">{{title}}</h4>
                         <p class="text-muted">{{description}}</p>
-                        <p class="btn btn-primary" style="position:absolute;bottom:-20px;right:5px;margin:0px;padding:10px 23px;">${{price}}</p>
+                        <p id="add-to-cart" class="btn btn-primary" style="position:absolute;right:5px;bottom:-30px;margin:0px;padding:10px 23px;" onclick="window.location.href='/add-to-cart/{{_id}}'">
+                            <span>${{price}}</span>
+                        </p>
                     </div>
                 {{/each}}
                 </div>
