--- a/views/product/menu.hbs
+++ b/views/product/menu.hbs
@@ -7,6 +7,12 @@
         </div>
     </header>
 
+    {{#if error}}
+        <div class="alert alert-danger" style="text-align: center;">
+            <strong>Sorry!</strong> You must login to add the item to your cart!
+        </div>  
+    {{/if}}
+
     <div id="container" class="container" style="margin-top: 50px">
             <div class="row text-center" >
                 {{#each allProduct}}
@@ -14,7 +20,9 @@
                         <img id="contentImg" src="../uploads/{{productImg}}">
                         <h4 class="section-heading">{{title}}</h4>
                         <p class="text-muted">{{description}}</p>
-                        <p class="btn btn-primary" style="position:absolute;bottom:-20px;right:5px;margin:0px;padding:10px 23px;">${{price}}</p>
+                        <p id="add-to-cart" class="btn btn-primary" style="position:absolute;right:5px;bottom:-20px;margin:0px;padding:10px 23px;" onclick="window.location.href='/add-to-cart/{{_id}}'">
+                            <span>${{price}}</span>
+                        </p>
                     </div>
                 {{/each}}
             </div>
